starship: use branch symbol for worktree indicator

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -48,7 +48,7 @@ success_symbol = "[❯](green)"
 error_symbol = "[x](red)"
 
 [custom.git_worktree]
-command = "printf '🌲'"
+command = "printf '⎇'"
 when = "git rev-parse --is-inside-work-tree 2>/dev/null && [ -f $(git rev-parse --git-dir)/commondir ]"
 format = " [$output]($style)"
 style = "bold yellow"
