--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -52,12 +52,8 @@ set -g mode-keys vi
 
 # Smoother scrolling with mouse in copy mode.
 # https://stackoverflow.com/a/46617618/1745064
-# bind-key -T copy-mode-vi WheelUpPane send-keys -X scroll-up
-# bind-key -T copy-mode-vi WheelDownPane send-keys -X scroll-down
-#
-# Half-page scrolling with mouse in copy mode.
-bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
-bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
+bind-key -T copy-mode-vi WheelUpPane send-keys -X scroll-up
+bind-key -T copy-mode-vi WheelDownPane send-keys -X scroll-down
 
 # Use v ("visual mode") in addition to SPC to begin copy-mode selection.
 bind-key -T copy-mode-vi v send-keys -X begin-selection
