--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,6 +56,7 @@ repos:
           - --no-sort-keys
         exclude: ^logseq/.logseq/preferences\.json$|^nvim/.config/nvim/lazy-lock\.json$|^vscode/Library/Application\ Support/Code/User/(keybindings|settings)\.json$|^zed/.config/zed/settings.json$
       - id: trailing-whitespace
+        exclude: .gitconfig$
         # keep-sorted end
   # keep-sorted start
   - repo: https://github.com/codespell-project/codespell
